--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     </header>
     <hr>
     <main>
+      <div class="whatsapp-icon">
+        <a href="https://wa.me/+51951254925?text=Hola,%20estoy%20interesado%20en%20obtener%20más%20información%20sobre%20sus%20productos." target="_blank">
+          <i class="fa-brands fa-whatsapp"></i>
+        </a>       
+      </div>
       <h3>Todos nuestros productos</h3>
       <!-- Lista de productos -->
       <div id="products-container" class="principal__container">
@@ -41,10 +46,30 @@
         <div id="modal" class="modal__element">
 
         </div>
+        
       </div>
       
     </main>
-
+    <hr>
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-name">
+            Esta página fue creada por Nelson Larico
+          </div>          
+          <div class="footer-social">
+            <ul>
+              <li><a href="https://www.facebook.com/profile.php?id=100074426024811" target="_blank"><i class="fab fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/NelsonLa2610" target="_blank"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="https://www.instagram.com/lariconelson/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2023 Hecho en Academlo</p>
+        </div>
+      </div>
+    </footer>
     <script src="https://kit.fontawesome.com/7acc2715e4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
